--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -189,10 +189,7 @@ workflows:
             - check_circleci_user
             - check_code_quality
             - check_repository_consistency
-            - fetch_tests:
-                # [reference] https://circleci.com/docs/contexts/
-                context:
-                    - TRANSFORMERS_CONTEXT
+            - fetch_tests
 
     nightly:
         when: <<pipeline.parameters.nightly>>
