--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,8 +51,11 @@ jobs:
                 # `CIRCLE_TOKEN` is defined as an environment variables set within a context, see `https://circleci.com/docs/contexts/`
                 command: |
                     project_slug="gh/${CIRCLE_PROJECT_USERNAME}/${CIRCLE_PROJECT_REPONAME}"
+                    echo $project_slug
                     job_number=${CIRCLE_BUILD_NUM}
+                    echo $job_number
                     url="https://circleci.com/api/v2/project/${project_slug}/${job_number}/artifacts"
+                    echo $url
                     curl -o test_preparation/artifacts.json ${url} --header "Circle-Token: $CIRCLE_TOKEN"
             - run:
                 name: "Prepare pipeline parameters"
