--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,6 +57,7 @@ jobs:
                     url="https://circleci.com/api/v2/project/${project_slug}/${job_number}/artifacts"
                     echo $url
                     curl -o test_preparation/artifacts.json ${url} --header "Circle-Token: $CIRCLE_TOKEN"
+                    tail -100 test_preparation/artifacts.json
             - run:
                 name: "Prepare pipeline parameters"
                 command: |
